add enum setting